[gd_scene load_steps=7 format=3 uid="uid://cwgod87muj3u6"]

[ext_resource type="PackedScene" uid="uid://ceia3a1xxcffb" path="res://player.tscn" id="1_51eps"]
[ext_resource type="Script" path="res://main.gd" id="1_elylv"]
[ext_resource type="PackedScene" uid="uid://dti7ds84lbrg0" path="res://enemy.tscn" id="2_jb4kb"]
[ext_resource type="PackedScene" uid="uid://ben64b4o3bj0o" path="res://room.tscn" id="3_iceu5"]
[ext_resource type="PackedScene" uid="uid://blsmdqlq0fi5j" path="res://hud.tscn" id="4_3vxvm"]

[sub_resource type="Curve2D" id="Curve2D_08ax6"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 128, 192, 0, 0, 0, 0, 128, 192, 0, 0, 0, 0, 1472, 192, 0, 0, 0, 0, 1472, 768, 0, 0, 0, 0, 128, 768, 0, 0, 0, 0, 128, 192)
}
point_count = 6

[node name="Main" type="Node"]
script = ExtResource("1_elylv")
enemy_scene = ExtResource("2_jb4kb")

[node name="Room" parent="." instance=ExtResource("3_iceu5")]

[node name="Player" parent="." instance=ExtResource("1_51eps")]
position = Vector2(824, 448)

[node name="EnemyTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(824, 474)

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_08ax6")

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]
position = Vector2(127.759, 192)

[node name="HUD" parent="." instance=ExtResource("4_3vxvm")]

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
